--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ark_snarkjs"
+name = "ark-snarkjs"
 version = "0.1.0"
 edition = "2024"                
 authors = ["Sergey Sobolev"]
